package OCP.Interface;

public interface Animal {
  String makeSound();
}
